<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Honest City</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_subject_detail"></string>
    <string name="title_camera_activity"></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"> </string>
    <string name="second_fragment_label" translatable="false"></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Exchange rates</string>
    <string name="tab_text_2">Suggestions</string>
    <string name="user_detail_settings">Settings</string>
    <string name="user_detail_suggestions">Your suggestions</string>
    <string name="currency_header">Currency</string>
    <string name="exchange_point_rate_header">Exchange point</string>
    <string name="authority_rate_header">Authority</string>
    <string name="exchange_point_to_authority_rates_difference">Lost at %</string>
    <string name="title_activity_user_detail">UserDetail</string>
    <string name="vote_for_suggestion_button">+</string>
    <string name="delete_user_suggestion">-</string>
    <string name="analyze_actual_rate">Analyze rate</string>

    <!-- SUBJECT MENU -->
    <string name="watched_subject_suggest_change_exchange_rate">Suggest exchange rate</string>
    <string name="watched_subject_suggest_non_existence">Delete subject</string>
    <string name="vote_for_new_subject_suggestion">Vote for</string>
    <string name="title_activity_camera_result_fragment"></string>
    <!-- -->

    <!-- USER MENU -->
    <string name="user_detail_logout">Logout</string>
    <!-- -->

    <!-- Filter -->
    <string name="filter_show_subject_settings">Show subject settings</string>
    <string name="filter_button_ok">OK</string>
    <string name="filter_honest_subject">Show: Honest subjects</string>
    <string name="filter_be_caution">Show: Be caution Subjects</string>
    <string name="filter_dishonest_subject">Show: Dishonest subjects</string>
    <string name="filter_unknown_honesty">Show: Subjects with unknown honesty</string>
    <!-- -->

    <string name="suggestion_type_title">Type</string>
    <string name="suggestion_state_title">State</string>
    <string name="suggestion_votes_title">Votes</string>
    <string name="suggestion_created_title">Created</string>

    <string name="title_activity_camera_result">Is rate good?</string>
    <string name="title_activity_login">Login</string>
    <string name="suggest_new_rate_text">Suggest</string>
    <string name="suggest_rate_button">Suggest rate</string>

    <string name="facebook_login_cancelled">Facebook login was cancelled</string>
    <string name="facebook_login_error">Error occurred during facebook login, retry login later</string>

    <string name="sync_account_type">honest.city.cz</string>
    <string name="content_authority">cz.city.honest.application</string>
    <string name="sync_account">placeholderaccount</string>
    <string name="map_login_button">Login</string>
    <string name="add_subject_button">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filtr">FiltrActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="decoded_text">Decoded Text</string>

</resources>