<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="cz.city.honest.dto.HonestyStatus"/>
        <variable
            name="filterViewModel"
            type="cz.city.honest.viewmodel.FilterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout

            android:id="@+id/filter_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/headerBackground">

            <TextView
                android:id="@+id/filter_header_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_show_subject_settings"
                android:textColor="@color/headerText" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/filter_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/show_honest_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:checked="@={filterViewModel.honestyStatusVisibilityLiveData[HonestyStatus.HONEST]}"
                android:onCheckedChanged="@{(button, isChecked) -> filterViewModel.updateVisibilityState(HonestyStatus.HONEST,isChecked)}"
                android:text="@string/filter_show_subject_settings" />

            <Switch
                android:id="@+id/show_honest_with_reserve_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:checked="@={filterViewModel.filterData.subjectFilter.honestyStatusVisibilityMap[HonestyStatus.HONEST]}"
                android:text="@string/filter_honest_subject" />

            <Switch
                android:id="@+id/show_be_caution_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:checked="@={filterViewModel.filterData.subjectFilter.honestyStatusVisibilityMap[HonestyStatus.BE_CAUTION]}"
                android:text="@string/filter_be_caution" />

            <Switch
                android:id="@+id/show_dishonest_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:checked="@={filterViewModel.filterData.subjectFilter.honestyStatusVisibilityMap[HonestyStatus.DISHONEST]}"
                android:text="@string/filter_dishonest_subject" />

            <Switch
                android:id="@+id/show_unknown_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:checked="@={filterViewModel.filterData.subjectFilter.honestyStatusVisibilityMap[HonestyStatus.UNKNOWN]}"
                android:text="@string/filter_unknown_honesty" />
        </FrameLayout>

        <LinearLayout

            android:id="@+id/filter_footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/filter_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue_600"
                android:gravity="center"
                android:text="@string/filter_button_ok"
                android:textColor="@color/headerText" />

        </LinearLayout>
    </LinearLayout>
</layout>